fix: align walk leg duration with labels in trip pattern

--- a/src/modules/transport-mode/icon/icon.module.css
+++ b/src/modules/transport-mode/icon/icon.module.css
@@ -48,9 +48,3 @@
 .transportIconWithLabel__label {
   margin-left: token('spacing.xSmall');
 }
-
-.transportIconWithLabel__duration {
-  align-self: flex-end;
-  transform: translateY(25%);
-  margin-left: -0.125rem;
-}
